Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
N/A
-
None
Description
CREATE TABLE t1 ( a date); |
INSERT INTO t1 VALUES ('1994-10-18'), ('1905-12-25'), (NULL), ('1938-12-17'), ('1931-04-28'), ('1919-05-09'), (NULL), ('1943-09-04'), ('2015-11-04'), (NULL), (NULL); |
|
|
SELECT aes_encrypt(a,a) FROM t1 ; |
preview-11.2-preview 7c7de020b576a42bd381a9 :
/11/sql/sql_type.cc:7448: bool Type_handler::Item_send_str(Item*, Protocol*, st_value*) const: Assertion `!item->null_value' failed.
|
230705 17:21:28 [ERROR] mysqld got signal 6 ;
|
|
|
|
|
Server version: 11.2.0-MariaDB-debug-log source revision: 7c7de020b576a42bd381a9060c3076f85da0d9d4
|
|
|
sql/sql_type.cc:7449(Type_handler::Item_send_str(Item*, Protocol*, st_value*) const)[0x5613515429bb]
|
sql/sql_type.h:5456(Type_handler_string_result::Item_send(Item*, Protocol*, st_value*) const)[0x5613512c3b72]
|
sql/item.h:1236(Item::send(Protocol*, st_value*))[0x561350a96bc8]
|
sql/protocol.cc:1332(Protocol::send_result_set_row(List<Item>*))[0x561350b56d6f]
|
sql/sql_class.cc:3125(select_send::send_data(List<Item>&))[0x561350cfbbca]
|
sql/sql_class.h:5756(select_result_sink::send_data_with_check(List<Item>&, st_select_lex_unit*, unsigned long long))[0x561351036bb9]
|
sql/sql_select.cc:24697(end_send(JOIN*, st_join_table*, bool))[0x561350feccac]
|
sql/sql_select.cc:23664(evaluate_join_record(JOIN*, st_join_table*, int))[0x561350fe4a93]
|
sql/sql_select.cc:23468(sub_select(JOIN*, st_join_table*, bool))[0x561350fe3982]
|
sql/sql_select.cc:22948(do_select(JOIN*, Procedure*))[0x561350fe0c23]
|
sql/sql_select.cc:4933(JOIN::exec_inner())[0x561350f5f22d]
|
sql/sql_select.cc:4710(JOIN::exec())[0x561350f5c5e4]
|
sql/sql_select.cc:5239(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x561350f60d35]
|
sql/sql_select.cc:627(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x561350f304a9]
|
sql/sql_parse.cc:6030(execute_sqlcom_select(THD*, TABLE_LIST*))[0x561350e519ca]
|
sql/sql_parse.cc:3944(mysql_execute_command(THD*, bool))[0x561350e425de]
|
sql/sql_parse.cc:7769(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x561350e5c80f]
|
sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x561350e34cef]
|
sql/sql_parse.cc:1405(do_command(THD*, bool))[0x561350e31a39]
|
sql/sql_connect.cc:1416(do_handle_one_connection(CONNECT*, bool))[0x56135130cd17]
|
sql/sql_connect.cc:1320(handle_one_connection)[0x56135130c674]
|
perfschema/pfs.cc:2203(pfs_spawn_thread)[0x561351f89a46]
|
nptl/pthread_create.c:478(start_thread)[0x7f765105f609]
|
|
|
Query (0x6290001092a8): SELECT aes_encrypt(a,a) FROM t1
|
not reproducible on 10.6-11.1
Attachments
Issue Links
- is caused by
-
MDEV-9069 extend AES_ENCRYPT() and AES_DECRYPT() to support IV and the algorithm
-
- Closed
-
- relates to
-
MDEV-31629 Assertion `(m_ptr == __null) == item->null_value' failed in VDec::VDec
-
- Open
-