MDEV-31633 Assertion `!item->null_value' failed in Type_handler::Item_send_str